--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.example.dbhook"
-        minSdkVersion 23
+        applicationId "com.hook.linkedin"
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
-        versionName "1.2"
+        versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -30,6 +30,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     compileOnly 'de.robv.android.xposed:api:82'
-
     compileOnly 'de.robv.android.xposed:api:82:sources'
 }
